@@ -16,8 +16,9 @@ import java.util.*;
 public class ContextStack implements Map<String, Object> {
     protected final static org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(ContextStack.class);
 
-    protected final Deque<Deque<Map<String, Object>>> contextStack = new LinkedList<Deque<Map<String, Object>>>();
-    protected Deque<Map<String, Object>> stackList = new LinkedList<Map<String, Object>>();
+    // Using ArrayList for more efficient iterating, this alone eliminate about 40% of the run time in get()
+    protected final ArrayList<ArrayList<Map<String, Object>>> contextStack = new ArrayList<ArrayList<Map<String, Object>>>();
+    protected ArrayList<Map<String, Object>> stackList = new ArrayList<Map<String, Object>>();
     protected Map<String, Object> firstMap = null;
 
     public ContextStack() {
@@ -27,8 +28,8 @@ public class ContextStack implements Map<String, Object> {
 
     /** Push (save) the entire context, ie the whole Map stack, to create an isolated empty context. */
     public ContextStack pushContext() {
-        contextStack.addFirst(stackList);
-        stackList = new LinkedList<Map<String, Object>>();
+        contextStack.add(0, stackList);
+        stackList = new ArrayList<Map<String, Object>>();
         firstMap = null;
         push();
         return this;
@@ -36,8 +37,8 @@ public class ContextStack implements Map<String, Object> {
 
     /** Pop (restore) the entire context, ie the whole Map stack, undo isolated empty context and get the original one. */
     public ContextStack popContext() {
-        stackList = contextStack.removeFirst();
-        firstMap = stackList.getFirst();
+        stackList = contextStack.remove(0);
+        firstMap = stackList.get(0);
         return this;
     }
 
@@ -46,7 +47,7 @@ public class ContextStack implements Map<String, Object> {
      */
     public ContextStack push() {
         Map<String, Object> newMap = new HashMap<String, Object>();
-        stackList.addFirst(newMap);
+        stackList.add(0, newMap);
         firstMap = newMap;
         return this;
     }
@@ -57,7 +58,7 @@ public class ContextStack implements Map<String, Object> {
      */
     public ContextStack push(Map<String, Object> existingMap) {
         if (existingMap == null) throw new IllegalArgumentException("Cannot push null as an existing Map");
-        stackList.addFirst(existingMap);
+        stackList.add(0, existingMap);
         firstMap = existingMap;
         return this;
     }
@@ -68,8 +69,8 @@ public class ContextStack implements Map<String, Object> {
      * @return The first/top Map
      */
     public Map pop() {
-        Map<String, Object> popped = stackList.size() > 0 ? stackList.removeFirst() : null;
-        firstMap = stackList.size() > 0 ? stackList.peekFirst() : null;
+        Map<String, Object> popped = stackList.size() > 0 ? stackList.remove(0) : null;
+        firstMap = stackList.size() > 0 ? stackList.get(0) : null;
         return popped;
     }
 
@@ -78,10 +79,10 @@ public class ContextStack implements Map<String, Object> {
      */
     public void addRootMap(Map<String, Object> existingMap) {
         if (existingMap == null) throw new IllegalArgumentException("Cannot add null as an existing Map");
-        stackList.addLast(existingMap);
+        stackList.add(existingMap);
     }
 
-    public Map getRootMap() { return stackList.peekLast(); }
+    public Map getRootMap() { return stackList.get(stackList.size() - 1); }
 
     /**
      * Creates a ContextStack object that has the same Map objects on its stack (a shallow clone).
@@ -110,7 +111,9 @@ public class ContextStack implements Map<String, Object> {
     }
 
     public boolean containsKey(Object key) {
-        for (Map curMap: stackList) {
+        int size = stackList.size();
+        for (int i = 0; i < size; i++) {
+            Map<String, Object> curMap = stackList.get(i);
             if (key == null && curMap instanceof Hashtable) continue;
             if (curMap.containsKey(key)) return true;
         }
@@ -121,7 +124,9 @@ public class ContextStack implements Map<String, Object> {
         // this keeps track of keys looked at for values at each level of the stack so that the same key is not
         // considered more than once (the earlier Maps overriding later ones)
         Set<Object> keysObserved = new HashSet<Object>();
-        for (Map<String, Object> curMap: stackList) {
+        int size = stackList.size();
+        for (int i = 0; i < size; i++) {
+            Map<String, Object> curMap = stackList.get(i);
             for (Map.Entry curEntry: curMap.entrySet()) {
                 if (!keysObserved.contains(curEntry.getKey())) {
                     keysObserved.add(curEntry.getKey());
@@ -137,27 +142,46 @@ public class ContextStack implements Map<String, Object> {
     }
 
     public Object get(Object keyObj) {
-        if (keyObj != null && !(keyObj instanceof CharSequence)) return null;
-        String key = keyObj != null ? keyObj.toString(): null;
-        // the "context" key always gets a self-reference, effectively the top of the stack
-        if ("context".equals(key)) return this;
+        String key = null;
+        if (keyObj != null) {
+            if (keyObj instanceof String) {
+                key = (String) keyObj;
+            } else if (keyObj instanceof CharSequence) {
+                key = keyObj.toString();
+            } else {
+                return null;
+            }
+        }
+
+        // optimize for non-null get, avoid double lookup with containsKey/get
+        // it sure would be nice if there was a getEntry method in Java Maps... could always avoid the double lookup
+        Object value = firstMap.get(key);
+        if (value != null) return value;
+
         if (firstMap.containsKey(key)) {
-            return firstMap.get(key);
+            // we already got it and it's null by this point
+            return null;
         } else {
-            Object value = null;
-            for (Map curMap: stackList) {
+            int size = stackList.size();
+            // start with 1 to skip the first Map
+            for (int i = 1; i < size; i++) {
+                Map<String, Object> curMap = stackList.get(i);
                 try {
                     if (key == null && curMap instanceof Hashtable) continue;
-                    if (curMap.containsKey(key)) {
-                        value = curMap.get(key);
-                        break;
-                    }
+                    // optimize for non-null get, avoid double lookup with containsKey/get
+                    value = curMap.get(key);
+                    if (value != null) return value;
+                    if (curMap.containsKey(key)) return null;
                 } catch (Exception e) {
                     logger.error("Error getting value for key [" + key + "], returning null", e);
                     return null;
                 }
             }
-            return value;
+
+            // didn't find it
+            // the "context" key always gets a self-reference; look for this last as it takes a sec and is uncommon
+            if ("context".equals(key)) return this;
+            return null;
         }
     }
 
@@ -176,7 +200,9 @@ public class ContextStack implements Map<String, Object> {
     public Set<String> keySet() {
         Set<String> resultSet = new HashSet<String>();
         resultSet.add("context");
-        for (Map<String, Object> curMap: stackList) {
+        int size = stackList.size();
+        for (int i = 0; i < size; i++) {
+            Map<String, Object> curMap = stackList.get(i);
             resultSet.addAll(curMap.keySet());
         }
         return Collections.unmodifiableSet(resultSet);
@@ -185,7 +211,9 @@ public class ContextStack implements Map<String, Object> {
     public Collection<Object> values() {
         Set<Object> keysObserved = new HashSet<Object>();
         List<Object> resultValues = new LinkedList<Object>();
-        for (Map<String, Object> curMap: stackList) {
+        int size = stackList.size();
+        for (int i = 0; i < size; i++) {
+            Map<String, Object> curMap = stackList.get(i);
             for (Map.Entry curEntry: curMap.entrySet()) {
                 if (!keysObserved.contains(curEntry.getKey())) {
                     keysObserved.add(curEntry.getKey());
@@ -200,7 +228,9 @@ public class ContextStack implements Map<String, Object> {
     public Set<Map.Entry<String, Object>> entrySet() {
         Set<Object> keysObserved = new HashSet<Object>();
         Set<Map.Entry<String, Object>> resultEntrySet = new HashSet<Map.Entry<String, Object>>();
-        for (Map<String, Object> curMap: stackList) {
+        int size = stackList.size();
+        for (int i = 0; i < size; i++) {
+            Map<String, Object> curMap = stackList.get(i);
             for (Map.Entry<String, Object> curEntry: curMap.entrySet()) {
                 if (!keysObserved.contains(curEntry.getKey())) {
                     keysObserved.add(curEntry.getKey());
@@ -236,7 +266,9 @@ public class ContextStack implements Map<String, Object> {
     }
 
     @Override
-    public int hashCode() { return this.stackList.hashCode(); }
+    public int hashCode() {
+        return this.stackList.hashCode();
+    }
 
     @Override
     public boolean equals(Object o) {
